{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 1655,
  "lineage": "69d03b53-2014-e41d-48a1-827b5a5e2888",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "consul_external_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.29.56.80",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-01-10T07:53:39.503-08:00",
            "id": "projects/tf-gcp-interview-373822/regions/us-central1/addresses/my-consul-static-ip-address",
            "name": "my-consul-static-ip-address",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "tf-gcp-interview-373822",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/addresses/my-consul-static-ip-address",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/zones/us-central1-a/instances/spoke2-vm-consul1"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "spoke1_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/panw-gcp-team-testing/global/images/ubuntu-2004-lts-apache",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/zones/us-central1-a/disks/spoke1-vm1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/tf-gcp-interview-373822/zones/us-central1-a/instances/spoke1-vm1",
            "instance_id": "8830198355655142009",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "serial-port-enable": "true",
              "ssh-keys": "paloalto:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDcZhZaIxYmbBWvkUWUW9UL1HpsXicUxHirmBtiRZPYlJMBqt1CPmAhZJPhnF1HBE+6IfdiKb4y0eXW/KmOL++VZ+GpCzEzLuW443NJoirTGH7tQSAH3X2puurdvhS1ySidYAetSPBkr3dfIh5FazB1WwztDBwdqy8ku3+jjf5D6BckeW6HyulTNf4ZbM517pc34Awe2N+Q1KsYoll3UbsAf1UB0okujxMnTZJ+rrfOCGnfhN1+0yxfruSY9Gt7ttU8/XCZzoCo0sPUSHjQYiPFn9GAeNmE1Hdw3kycTSO1Qyb54DEn3/1KEnjWxAb8spBzFkZ5oQIumlFUnRYsx+zyTfeE2of+rmVt4Vn5zB6SNpFz3ApNdngP4qLOmDiNwWN7Alqu5JmXi5tQTmwgkuWkxYZntst4vGpLGRm8yRxo [...]
            },
            "metadata_fingerprint": "IZ3jt1NkoCQ=",
            "name": "spoke1-vm1",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/networks/spoke1-vpc",
                "network_ip": "10.1.0.5",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-spoke1",
                "subnetwork_project": "tf-gcp-interview-373822"
              }
            ],
            "project": "tf-gcp-interview-373822",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/zones/us-central1-a/instances/spoke1-vm1",
            "service_account": [
              {
                "email": "999098630472-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud.useraccounts.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "data.google_compute_zones.main",
            "google_compute_address.consul_external_ip",
            "module.vpc_spoke1.module.subnets.google_compute_subnetwork.subnetwork"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/panw-gcp-team-testing/global/images/ubuntu-2004-lts-apache",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/zones/us-central1-a/disks/spoke1-vm2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/tf-gcp-interview-373822/zones/us-central1-a/instances/spoke1-vm2",
            "instance_id": "4035517357136816761",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "serial-port-enable": "true",
              "ssh-keys": "paloalto:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDcZhZaIxYmbBWvkUWUW9UL1HpsXicUxHirmBtiRZPYlJMBqt1CPmAhZJPhnF1HBE+6IfdiKb4y0eXW/KmOL++VZ+GpCzEzLuW443NJoirTGH7tQSAH3X2puurdvhS1ySidYAetSPBkr3dfIh5FazB1WwztDBwdqy8ku3+jjf5D6BckeW6HyulTNf4ZbM517pc34Awe2N+Q1KsYoll3UbsAf1UB0okujxMnTZJ+rrfOCGnfhN1+0yxfruSY9Gt7ttU8/XCZzoCo0sPUSHjQYiPFn9GAeNmE1Hdw3kycTSO1Qyb54DEn3/1KEnjWxAb8spBzFkZ5oQIumlFUnRYsx+zyTfeE2of+rmVt4Vn5zB6SNpFz3ApNdngP4qLOmDiNwWN7Alqu5JmXi5tQTmwgkuWkxYZntst4vGpLGRm8yRxo [...]
            },
            "metadata_fingerprint": "IZ3jt1NkoCQ=",
            "name": "spoke1-vm2",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/networks/spoke1-vpc",
                "network_ip": "10.1.0.4",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-spoke1",
                "subnetwork_project": "tf-gcp-interview-373822"
              }
            ],
            "project": "tf-gcp-interview-373822",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/zones/us-central1-a/instances/spoke1-vm2",
            "service_account": [
              {
                "email": "999098630472-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud.useraccounts.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "data.google_compute_zones.main",
            "google_compute_address.consul_external_ip",
            "module.vpc_spoke1.module.subnets.google_compute_subnetwork.subnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "spoke2_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/panw-gcp-team-testing/global/images/ubuntu-2004-lts-apache",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/zones/us-central1-a/disks/spoke2-api1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/tf-gcp-interview-373822/zones/us-central1-a/instances/spoke2-api1",
            "instance_id": "3623492193719691886",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "serial-port-enable": "true",
              "ssh-keys": "paloalto:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDcZhZaIxYmbBWvkUWUW9UL1HpsXicUxHirmBtiRZPYlJMBqt1CPmAhZJPhnF1HBE+6IfdiKb4y0eXW/KmOL++VZ+GpCzEzLuW443NJoirTGH7tQSAH3X2puurdvhS1ySidYAetSPBkr3dfIh5FazB1WwztDBwdqy8ku3+jjf5D6BckeW6HyulTNf4ZbM517pc34Awe2N+Q1KsYoll3UbsAf1UB0okujxMnTZJ+rrfOCGnfhN1+0yxfruSY9Gt7ttU8/XCZzoCo0sPUSHjQYiPFn9GAeNmE1Hdw3kycTSO1Qyb54DEn3/1KEnjWxAb8spBzFkZ5oQIumlFUnRYsx+zyTfeE2of+rmVt4Vn5zB6SNpFz3ApNdngP4qLOmDiNwWN7Alqu5JmXi5tQTmwgkuWkxYZntst4vGpLGRm8yRxo [...]
            },
            "metadata_fingerprint": "W5XJJZWmr3U=",
            "metadata_startup_script": "#!/bin/bash\n\n#Utils\nsudo apt-get update\nsudo apt-get install unzip\nsudo apt-get jq\n\n#Download Consul\nconsul_version=\"1.14.3\"\ncurl --silent --remote-name https://releases.hashicorp.com/consul/1.14.3/consul_1.14.3_linux_amd64.zip\n\n#Install Consul\nunzip consul_1.14.3_linux_amd64.zip\nsudo chown root:root consul\nsudo mv consul /usr/local/bin/\nconsul -autocomplete-install\ncomplete -C /usr/local/bin/consul consul\n\nsudo mkdir --parents /opt/con [...]
            "name": "spoke2-api1",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/networks/spoke2-vpc",
                "network_ip": "10.2.0.5",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-spoke2",
                "subnetwork_project": "tf-gcp-interview-373822"
              }
            ],
            "project": "tf-gcp-interview-373822",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/zones/us-central1-a/instances/spoke2-api1",
            "service_account": [
              {
                "email": "999098630472-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud.useraccounts.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "data.google_compute_zones.main",
            "google_compute_address.consul_external_ip",
            "module.vpc_spoke2.module.subnets.google_compute_subnetwork.subnetwork"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/panw-gcp-team-testing/global/images/ubuntu-2004-lts-apache",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/zones/us-central1-a/disks/spoke2-api2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/tf-gcp-interview-373822/zones/us-central1-a/instances/spoke2-api2",
            "instance_id": "1905881346951096942",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "serial-port-enable": "true",
              "ssh-keys": "paloalto:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDcZhZaIxYmbBWvkUWUW9UL1HpsXicUxHirmBtiRZPYlJMBqt1CPmAhZJPhnF1HBE+6IfdiKb4y0eXW/KmOL++VZ+GpCzEzLuW443NJoirTGH7tQSAH3X2puurdvhS1ySidYAetSPBkr3dfIh5FazB1WwztDBwdqy8ku3+jjf5D6BckeW6HyulTNf4ZbM517pc34Awe2N+Q1KsYoll3UbsAf1UB0okujxMnTZJ+rrfOCGnfhN1+0yxfruSY9Gt7ttU8/XCZzoCo0sPUSHjQYiPFn9GAeNmE1Hdw3kycTSO1Qyb54DEn3/1KEnjWxAb8spBzFkZ5oQIumlFUnRYsx+zyTfeE2of+rmVt4Vn5zB6SNpFz3ApNdngP4qLOmDiNwWN7Alqu5JmXi5tQTmwgkuWkxYZntst4vGpLGRm8yRxo [...]
            },
            "metadata_fingerprint": "W5XJJZWmr3U=",
            "metadata_startup_script": "#!/bin/bash\n\n#Utils\nsudo apt-get update\nsudo apt-get install unzip\nsudo apt-get jq\n\n#Download Consul\nconsul_version=\"1.14.3\"\ncurl --silent --remote-name https://releases.hashicorp.com/consul/1.14.3/consul_1.14.3_linux_amd64.zip\n\n#Install Consul\nunzip consul_1.14.3_linux_amd64.zip\nsudo chown root:root consul\nsudo mv consul /usr/local/bin/\nconsul -autocomplete-install\ncomplete -C /usr/local/bin/consul consul\n\nsudo mkdir --parents /opt/con [...]
            "name": "spoke2-api2",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/networks/spoke2-vpc",
                "network_ip": "10.2.0.6",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-spoke2",
                "subnetwork_project": "tf-gcp-interview-373822"
              }
            ],
            "project": "tf-gcp-interview-373822",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/zones/us-central1-a/instances/spoke2-api2",
            "service_account": [
              {
                "email": "999098630472-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud.useraccounts.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "data.google_compute_zones.main",
            "google_compute_address.consul_external_ip",
            "module.vpc_spoke2.module.subnets.google_compute_subnetwork.subnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "spoke2_vm1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/panw-gcp-team-testing/global/images/ubuntu-2004-lts-apache",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/zones/us-central1-a/disks/spoke2-vm1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/tf-gcp-interview-373822/zones/us-central1-a/instances/spoke2-vm1",
            "instance_id": "5568642496500610219",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "serial-port-enable": "true",
              "ssh-keys": "paloalto:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDcZhZaIxYmbBWvkUWUW9UL1HpsXicUxHirmBtiRZPYlJMBqt1CPmAhZJPhnF1HBE+6IfdiKb4y0eXW/KmOL++VZ+GpCzEzLuW443NJoirTGH7tQSAH3X2puurdvhS1ySidYAetSPBkr3dfIh5FazB1WwztDBwdqy8ku3+jjf5D6BckeW6HyulTNf4ZbM517pc34Awe2N+Q1KsYoll3UbsAf1UB0okujxMnTZJ+rrfOCGnfhN1+0yxfruSY9Gt7ttU8/XCZzoCo0sPUSHjQYiPFn9GAeNmE1Hdw3kycTSO1Qyb54DEn3/1KEnjWxAb8spBzFkZ5oQIumlFUnRYsx+zyTfeE2of+rmVt4Vn5zB6SNpFz3ApNdngP4qLOmDiNwWN7Alqu5JmXi5tQTmwgkuWkxYZntst4vGpLGRm8yRxo [...]
            },
            "metadata_fingerprint": "UkXv7QedYLM=",
            "metadata_startup_script": "#!/bin/bash\n\n#Utils\nsudo apt-get update\nsudo apt-get install unzip\nsudo apt-get jq\n\n#Download Consul\nconsul_version=\"1.14.3\"\ncurl --silent --remote-name https://releases.hashicorp.com/consul/1.14.3/consul_1.14.3_linux_amd64.zip\n\n#Install Consul\nunzip consul_1.14.3_linux_amd64.zip\nsudo chown root:root consul\nsudo mv consul /usr/local/bin/\nconsul -autocomplete-install\ncomplete -C /usr/local/bin/consul consul\n\nsudo mkdir --parents /opt/con [...]
            "name": "spoke2-vm1",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/networks/spoke2-vpc",
                "network_ip": "10.2.0.10",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-spoke2",
                "subnetwork_project": "tf-gcp-interview-373822"
              }
            ],
            "project": "tf-gcp-interview-373822",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/zones/us-central1-a/instances/spoke2-vm1",
            "service_account": [
              {
                "email": "999098630472-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud.useraccounts.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "data.google_client_config.main",
            "data.google_compute_zones.main",
            "google_compute_address.consul_external_ip",
            "module.vpc_spoke2.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_spoke2.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "spoke2_vm1_consul",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/panw-gcp-team-testing/global/images/ubuntu-2004-lts-apache",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/zones/us-central1-a/disks/spoke2-vm-consul1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/tf-gcp-interview-373822/zones/us-central1-a/instances/spoke2-vm-consul1",
            "instance_id": "4766938948931957917",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "serial-port-enable": "true",
              "ssh-keys": "paloalto:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDcZhZaIxYmbBWvkUWUW9UL1HpsXicUxHirmBtiRZPYlJMBqt1CPmAhZJPhnF1HBE+6IfdiKb4y0eXW/KmOL++VZ+GpCzEzLuW443NJoirTGH7tQSAH3X2puurdvhS1ySidYAetSPBkr3dfIh5FazB1WwztDBwdqy8ku3+jjf5D6BckeW6HyulTNf4ZbM517pc34Awe2N+Q1KsYoll3UbsAf1UB0okujxMnTZJ+rrfOCGnfhN1+0yxfruSY9Gt7ttU8/XCZzoCo0sPUSHjQYiPFn9GAeNmE1Hdw3kycTSO1Qyb54DEn3/1KEnjWxAb8spBzFkZ5oQIumlFUnRYsx+zyTfeE2of+rmVt4Vn5zB6SNpFz3ApNdngP4qLOmDiNwWN7Alqu5JmXi5tQTmwgkuWkxYZntst4vGpLGRm8yRxo [...]
            },
            "metadata_fingerprint": "BDDYvM85-8A=",
            "metadata_startup_script": "#!/bin/bash\n\n#Utils\nsudo apt-get update\nsudo apt-get install unzip\nsudo apt-get jq\nsudo apt-get install curl gnupg lsb-release\nsudo curl --fail --silent --show-error --location https://apt.releases.hashicorp.com/gpg | \\\n      gpg --dearmor | \\\n      sudo dd of=/usr/share/keyrings/hashicorp-archive-keyring.gpg\n\nsudo echo \"deb [arch=amd64 signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_relea [...]
            "name": "spoke2-vm-consul1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.29.56.80",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/networks/ss-vpc",
                "network_ip": "10.5.0.99",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-ss",
                "subnetwork_project": "tf-gcp-interview-373822"
              }
            ],
            "project": "tf-gcp-interview-373822",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/zones/us-central1-a/instances/spoke2-vm-consul1",
            "service_account": [
              {
                "email": "999098630472-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud.useraccounts.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "data.google_compute_zones.main",
            "google_compute_address.consul_external_ip",
            "module.bootstrap.data.google_compute_default_service_account.this",
            "module.bootstrap.google_storage_bucket.this",
            "module.bootstrap.google_storage_bucket_iam_member.member",
            "module.bootstrap.google_storage_bucket_object.config_empty",
            "module.bootstrap.google_storage_bucket_object.content_empty",
            "module.bootstrap.google_storage_bucket_object.file",
            "module.bootstrap.google_storage_bucket_object.license_empty",
            "module.bootstrap.google_storage_bucket_object.software_empty",
            "module.bootstrap.random_string.randomstring",
            "module.iam_service_account.google_service_account.this",
            "module.vmseries.google_compute_instance.this",
            "module.vpc_ss.module.subnets.google_compute_subnetwork.subnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "spoke2_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/panw-gcp-team-testing/global/images/ubuntu-2004-lts-apache",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/zones/us-central1-a/disks/spoke2-web1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/tf-gcp-interview-373822/zones/us-central1-a/instances/spoke2-web1",
            "instance_id": "4636946425074166382",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "serial-port-enable": "true",
              "ssh-keys": "paloalto:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDcZhZaIxYmbBWvkUWUW9UL1HpsXicUxHirmBtiRZPYlJMBqt1CPmAhZJPhnF1HBE+6IfdiKb4y0eXW/KmOL++VZ+GpCzEzLuW443NJoirTGH7tQSAH3X2puurdvhS1ySidYAetSPBkr3dfIh5FazB1WwztDBwdqy8ku3+jjf5D6BckeW6HyulTNf4ZbM517pc34Awe2N+Q1KsYoll3UbsAf1UB0okujxMnTZJ+rrfOCGnfhN1+0yxfruSY9Gt7ttU8/XCZzoCo0sPUSHjQYiPFn9GAeNmE1Hdw3kycTSO1Qyb54DEn3/1KEnjWxAb8spBzFkZ5oQIumlFUnRYsx+zyTfeE2of+rmVt4Vn5zB6SNpFz3ApNdngP4qLOmDiNwWN7Alqu5JmXi5tQTmwgkuWkxYZntst4vGpLGRm8yRxo [...]
            },
            "metadata_fingerprint": "HAb44x4KD1U=",
            "metadata_startup_script": "#!/bin/bash\n\n#Utils\nsudo apt-get update\nsudo apt-get install unzip\nsudo apt-get jq\n\n#Download Consul\nconsul_version=\"1.14.3\"\ncurl --silent --remote-name https://releases.hashicorp.com/consul/1.14.3/consul_1.14.3_linux_amd64.zip\n\n#Install Consul\nunzip consul_1.14.3_linux_amd64.zip\nsudo chown root:root consul\nsudo mv consul /usr/local/bin/\nconsul -autocomplete-install\ncomplete -C /usr/local/bin/consul consul\n\nsudo mkdir --parents /opt/con [...]
            "name": "spoke2-web1",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/networks/spoke2-vpc",
                "network_ip": "10.2.0.3",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-spoke2",
                "subnetwork_project": "tf-gcp-interview-373822"
              }
            ],
            "project": "tf-gcp-interview-373822",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/zones/us-central1-a/instances/spoke2-web1",
            "service_account": [
              {
                "email": "999098630472-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud.useraccounts.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "data.google_compute_zones.main",
            "google_compute_address.consul_external_ip",
            "module.vpc_spoke2.module.subnets.google_compute_subnetwork.subnetwork"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/panw-gcp-team-testing/global/images/ubuntu-2004-lts-apache",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/zones/us-central1-a/disks/spoke2-web2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/tf-gcp-interview-373822/zones/us-central1-a/instances/spoke2-web2",
            "instance_id": "3771022808508803694",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "serial-port-enable": "true",
              "ssh-keys": "paloalto:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDcZhZaIxYmbBWvkUWUW9UL1HpsXicUxHirmBtiRZPYlJMBqt1CPmAhZJPhnF1HBE+6IfdiKb4y0eXW/KmOL++VZ+GpCzEzLuW443NJoirTGH7tQSAH3X2puurdvhS1ySidYAetSPBkr3dfIh5FazB1WwztDBwdqy8ku3+jjf5D6BckeW6HyulTNf4ZbM517pc34Awe2N+Q1KsYoll3UbsAf1UB0okujxMnTZJ+rrfOCGnfhN1+0yxfruSY9Gt7ttU8/XCZzoCo0sPUSHjQYiPFn9GAeNmE1Hdw3kycTSO1Qyb54DEn3/1KEnjWxAb8spBzFkZ5oQIumlFUnRYsx+zyTfeE2of+rmVt4Vn5zB6SNpFz3ApNdngP4qLOmDiNwWN7Alqu5JmXi5tQTmwgkuWkxYZntst4vGpLGRm8yRxo [...]
            },
            "metadata_fingerprint": "HAb44x4KD1U=",
            "metadata_startup_script": "#!/bin/bash\n\n#Utils\nsudo apt-get update\nsudo apt-get install unzip\nsudo apt-get jq\n\n#Download Consul\nconsul_version=\"1.14.3\"\ncurl --silent --remote-name https://releases.hashicorp.com/consul/1.14.3/consul_1.14.3_linux_amd64.zip\n\n#Install Consul\nunzip consul_1.14.3_linux_amd64.zip\nsudo chown root:root consul\nsudo mv consul /usr/local/bin/\nconsul -autocomplete-install\ncomplete -C /usr/local/bin/consul consul\n\nsudo mkdir --parents /opt/con [...]
            "name": "spoke2-web2",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/networks/spoke2-vpc",
                "network_ip": "10.2.0.2",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-spoke2",
                "subnetwork_project": "tf-gcp-interview-373822"
              }
            ],
            "project": "tf-gcp-interview-373822",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/zones/us-central1-a/instances/spoke2-web2",
            "service_account": [
              {
                "email": "999098630472-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud.useraccounts.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "data.google_compute_zones.main",
            "google_compute_address.consul_external_ip",
            "module.vpc_spoke2.module.subnets.google_compute_subnetwork.subnetwork"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/panw-gcp-team-testing/global/images/ubuntu-2004-lts-apache",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/zones/us-central1-a/disks/spoke2-web3"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/tf-gcp-interview-373822/zones/us-central1-a/instances/spoke2-web3",
            "instance_id": "1146770719473937006",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "serial-port-enable": "true",
              "ssh-keys": "paloalto:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDcZhZaIxYmbBWvkUWUW9UL1HpsXicUxHirmBtiRZPYlJMBqt1CPmAhZJPhnF1HBE+6IfdiKb4y0eXW/KmOL++VZ+GpCzEzLuW443NJoirTGH7tQSAH3X2puurdvhS1ySidYAetSPBkr3dfIh5FazB1WwztDBwdqy8ku3+jjf5D6BckeW6HyulTNf4ZbM517pc34Awe2N+Q1KsYoll3UbsAf1UB0okujxMnTZJ+rrfOCGnfhN1+0yxfruSY9Gt7ttU8/XCZzoCo0sPUSHjQYiPFn9GAeNmE1Hdw3kycTSO1Qyb54DEn3/1KEnjWxAb8spBzFkZ5oQIumlFUnRYsx+zyTfeE2of+rmVt4Vn5zB6SNpFz3ApNdngP4qLOmDiNwWN7Alqu5JmXi5tQTmwgkuWkxYZntst4vGpLGRm8yRxo [...]
            },
            "metadata_fingerprint": "HAb44x4KD1U=",
            "metadata_startup_script": "#!/bin/bash\n\n#Utils\nsudo apt-get update\nsudo apt-get install unzip\nsudo apt-get jq\n\n#Download Consul\nconsul_version=\"1.14.3\"\ncurl --silent --remote-name https://releases.hashicorp.com/consul/1.14.3/consul_1.14.3_linux_amd64.zip\n\n#Install Consul\nunzip consul_1.14.3_linux_amd64.zip\nsudo chown root:root consul\nsudo mv consul /usr/local/bin/\nconsul -autocomplete-install\ncomplete -C /usr/local/bin/consul consul\n\nsudo mkdir --parents /opt/con [...]
            "name": "spoke2-web3",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/networks/spoke2-vpc",
                "network_ip": "10.2.0.7",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-spoke2",
                "subnetwork_project": "tf-gcp-interview-373822"
              }
            ],
            "project": "tf-gcp-interview-373822",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/zones/us-central1-a/instances/spoke2-web3",
            "service_account": [
              {
                "email": "999098630472-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud.useraccounts.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "data.google_compute_zones.main",
            "google_compute_address.consul_external_ip",
            "module.vpc_spoke2.module.subnets.google_compute_subnetwork.subnetwork"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/panw-gcp-team-testing/global/images/ubuntu-2004-lts-apache",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/zones/us-central1-a/disks/spoke2-web4"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/tf-gcp-interview-373822/zones/us-central1-a/instances/spoke2-web4",
            "instance_id": "694774430031686254",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "serial-port-enable": "true",
              "ssh-keys": "paloalto:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDcZhZaIxYmbBWvkUWUW9UL1HpsXicUxHirmBtiRZPYlJMBqt1CPmAhZJPhnF1HBE+6IfdiKb4y0eXW/KmOL++VZ+GpCzEzLuW443NJoirTGH7tQSAH3X2puurdvhS1ySidYAetSPBkr3dfIh5FazB1WwztDBwdqy8ku3+jjf5D6BckeW6HyulTNf4ZbM517pc34Awe2N+Q1KsYoll3UbsAf1UB0okujxMnTZJ+rrfOCGnfhN1+0yxfruSY9Gt7ttU8/XCZzoCo0sPUSHjQYiPFn9GAeNmE1Hdw3kycTSO1Qyb54DEn3/1KEnjWxAb8spBzFkZ5oQIumlFUnRYsx+zyTfeE2of+rmVt4Vn5zB6SNpFz3ApNdngP4qLOmDiNwWN7Alqu5JmXi5tQTmwgkuWkxYZntst4vGpLGRm8yRxo [...]
            },
            "metadata_fingerprint": "HAb44x4KD1U=",
            "metadata_startup_script": "#!/bin/bash\n\n#Utils\nsudo apt-get update\nsudo apt-get install unzip\nsudo apt-get jq\n\n#Download Consul\nconsul_version=\"1.14.3\"\ncurl --silent --remote-name https://releases.hashicorp.com/consul/1.14.3/consul_1.14.3_linux_amd64.zip\n\n#Install Consul\nunzip consul_1.14.3_linux_amd64.zip\nsudo chown root:root consul\nsudo mv consul /usr/local/bin/\nconsul -autocomplete-install\ncomplete -C /usr/local/bin/consul consul\n\nsudo mkdir --parents /opt/con [...]
            "name": "spoke2-web4",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/networks/spoke2-vpc",
                "network_ip": "10.2.0.4",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-spoke2",
                "subnetwork_project": "tf-gcp-interview-373822"
              }
            ],
            "project": "tf-gcp-interview-373822",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/zones/us-central1-a/instances/spoke2-web4",
            "service_account": [
              {
                "email": "999098630472-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud.useraccounts.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "data.google_compute_zones.main",
            "google_compute_address.consul_external_ip",
            "module.vpc_spoke2.module.subnets.google_compute_subnetwork.subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.lb_external",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "rule1",
          "schema_version": 0,
          "attributes": {
            "address": "34.171.48.108",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-01-10T07:53:39.473-08:00",
            "id": "projects/tf-gcp-interview-373822/regions/us-central1/addresses/rule1",
            "name": "rule1",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "tf-gcp-interview-373822",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/addresses/rule1",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/forwardingRules/rule1"
            ]
          }
        },
        {
          "index_key": "rule2",
          "schema_version": 0,
          "attributes": {
            "address": "130.211.114.78",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-01-10T07:53:39.676-08:00",
            "id": "projects/tf-gcp-interview-373822/regions/us-central1/addresses/rule2",
            "name": "rule2",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "tf-gcp-interview-373822",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/addresses/rule2",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/forwardingRules/rule2"
            ]
          }
        },
        {
          "index_key": "rule3",
          "schema_version": 0,
          "attributes": {
            "address": "35.184.33.200",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-01-10T07:53:39.478-08:00",
            "id": "projects/tf-gcp-interview-373822/regions/us-central1/addresses/rule3",
            "name": "rule3",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "tf-gcp-interview-373822",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/addresses/rule3",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/forwardingRules/rule3"
            ]
          }
        }
      ]
    },
    {
      "module": "module.lb_external",
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "rule1",
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2023-01-10T07:55:54.351-08:00",
            "id": "projects/tf-gcp-interview-373822/regions/us-central1/forwardingRules/rule1",
            "ip_address": "34.171.48.108",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "rule1",
            "network_tier": "PREMIUM",
            "port_range": "80",
            "project": "tf-gcp-interview-373822",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/forwardingRules/rule1",
            "target": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/targetPools/fw-extlb"
          },
          "dependencies": [
            "data.google_client_config.main",
            "data.google_compute_zones.main",
            "module.bootstrap.data.google_compute_default_service_account.this",
            "module.bootstrap.google_storage_bucket.this",
            "module.bootstrap.google_storage_bucket_iam_member.member",
            "module.bootstrap.google_storage_bucket_object.config_empty",
            "module.bootstrap.google_storage_bucket_object.content_empty",
            "module.bootstrap.google_storage_bucket_object.file",
            "module.bootstrap.google_storage_bucket_object.license_empty",
            "module.bootstrap.google_storage_bucket_object.software_empty",
            "module.bootstrap.random_string.randomstring",
            "module.iam_service_account.google_service_account.this",
            "module.lb_external.data.google_client_config.this",
            "module.lb_external.google_compute_address.this",
            "module.lb_external.google_compute_http_health_check.this",
            "module.lb_external.google_compute_region_backend_service.this",
            "module.lb_external.google_compute_region_health_check.this",
            "module.lb_external.google_compute_target_pool.this",
            "module.vmseries.data.google_compute_image.vmseries",
            "module.vmseries.data.google_compute_subnetwork.this",
            "module.vmseries.google_compute_address.private",
            "module.vmseries.google_compute_address.public",
            "module.vmseries.google_compute_instance.this",
            "module.vmseries.google_compute_instance_group.this",
            "module.vmseries.null_resource.dependency_getter",
            "module.vpc_mgmt.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_mgmt.module.vpc.google_compute_network.network",
            "module.vpc_trust.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_trust.module.vpc.google_compute_network.network",
            "module.vpc_untrust.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_untrust.module.vpc.google_compute_network.network"
          ]
        },
        {
          "index_key": "rule2",
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2023-01-10T07:55:54.515-08:00",
            "id": "projects/tf-gcp-interview-373822/regions/us-central1/forwardingRules/rule2",
            "ip_address": "130.211.114.78",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "rule2",
            "network_tier": "PREMIUM",
            "port_range": "22",
            "project": "tf-gcp-interview-373822",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/forwardingRules/rule2",
            "target": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/targetPools/fw-extlb"
          },
          "dependencies": [
            "data.google_client_config.main",
            "data.google_compute_zones.main",
            "module.bootstrap.data.google_compute_default_service_account.this",
            "module.bootstrap.google_storage_bucket.this",
            "module.bootstrap.google_storage_bucket_iam_member.member",
            "module.bootstrap.google_storage_bucket_object.config_empty",
            "module.bootstrap.google_storage_bucket_object.content_empty",
            "module.bootstrap.google_storage_bucket_object.file",
            "module.bootstrap.google_storage_bucket_object.license_empty",
            "module.bootstrap.google_storage_bucket_object.software_empty",
            "module.bootstrap.random_string.randomstring",
            "module.iam_service_account.google_service_account.this",
            "module.lb_external.data.google_client_config.this",
            "module.lb_external.google_compute_address.this",
            "module.lb_external.google_compute_http_health_check.this",
            "module.lb_external.google_compute_region_backend_service.this",
            "module.lb_external.google_compute_region_health_check.this",
            "module.lb_external.google_compute_target_pool.this",
            "module.vmseries.data.google_compute_image.vmseries",
            "module.vmseries.data.google_compute_subnetwork.this",
            "module.vmseries.google_compute_address.private",
            "module.vmseries.google_compute_address.public",
            "module.vmseries.google_compute_instance.this",
            "module.vmseries.google_compute_instance_group.this",
            "module.vmseries.null_resource.dependency_getter",
            "module.vpc_mgmt.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_mgmt.module.vpc.google_compute_network.network",
            "module.vpc_trust.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_trust.module.vpc.google_compute_network.network",
            "module.vpc_untrust.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_untrust.module.vpc.google_compute_network.network"
          ]
        },
        {
          "index_key": "rule3",
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2023-01-10T07:55:54.302-08:00",
            "id": "projects/tf-gcp-interview-373822/regions/us-central1/forwardingRules/rule3",
            "ip_address": "35.184.33.200",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "rule3",
            "network_tier": "PREMIUM",
            "port_range": "8500",
            "project": "tf-gcp-interview-373822",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/forwardingRules/rule3",
            "target": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/targetPools/fw-extlb"
          },
          "dependencies": [
            "data.google_client_config.main",
            "data.google_compute_zones.main",
            "module.bootstrap.data.google_compute_default_service_account.this",
            "module.bootstrap.google_storage_bucket.this",
            "module.bootstrap.google_storage_bucket_iam_member.member",
            "module.bootstrap.google_storage_bucket_object.config_empty",
            "module.bootstrap.google_storage_bucket_object.content_empty",
            "module.bootstrap.google_storage_bucket_object.file",
            "module.bootstrap.google_storage_bucket_object.license_empty",
            "module.bootstrap.google_storage_bucket_object.software_empty",
            "module.bootstrap.random_string.randomstring",
            "module.iam_service_account.google_service_account.this",
            "module.lb_external.data.google_client_config.this",
            "module.lb_external.google_compute_address.this",
            "module.lb_external.google_compute_http_health_check.this",
            "module.lb_external.google_compute_region_backend_service.this",
            "module.lb_external.google_compute_region_health_check.this",
            "module.lb_external.google_compute_target_pool.this",
            "module.vmseries.data.google_compute_image.vmseries",
            "module.vmseries.data.google_compute_subnetwork.this",
            "module.vmseries.google_compute_address.private",
            "module.vmseries.google_compute_address.public",
            "module.vmseries.google_compute_instance.this",
            "module.vmseries.google_compute_instance_group.this",
            "module.vmseries.null_resource.dependency_getter",
            "module.vpc_mgmt.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_mgmt.module.vpc.google_compute_network.network",
            "module.vpc_trust.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_trust.module.vpc.google_compute_network.network",
            "module.vpc_untrust.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_untrust.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.lb_internal",
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": true,
            "allow_global_access": false,
            "backend_service": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/backendServices/fw-ilb",
            "creation_timestamp": "2023-01-10T07:56:04.648-08:00",
            "id": "projects/tf-gcp-interview-373822/regions/us-central1/forwardingRules/fw-ilb",
            "ip_address": "192.168.2.10",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "INTERNAL",
            "name": "fw-ilb",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/networks/trust-vpc",
            "network_tier": "PREMIUM",
            "project": "tf-gcp-interview-373822",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/forwardingRules/fw-ilb",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-trust"
          },
          "dependencies": [
            "data.google_client_config.main",
            "data.google_compute_zones.main",
            "module.bootstrap.data.google_compute_default_service_account.this",
            "module.bootstrap.google_storage_bucket.this",
            "module.bootstrap.google_storage_bucket_iam_member.member",
            "module.bootstrap.google_storage_bucket_object.config_empty",
            "module.bootstrap.google_storage_bucket_object.content_empty",
            "module.bootstrap.google_storage_bucket_object.file",
            "module.bootstrap.google_storage_bucket_object.license_empty",
            "module.bootstrap.google_storage_bucket_object.software_empty",
            "module.bootstrap.random_string.randomstring",
            "module.iam_service_account.google_service_account.this",
            "module.lb_internal.data.google_client_config.this",
            "module.lb_internal.google_compute_health_check.this",
            "module.lb_internal.google_compute_region_backend_service.this",
            "module.vmseries.data.google_compute_image.vmseries",
            "module.vmseries.data.google_compute_subnetwork.this",
            "module.vmseries.google_compute_address.private",
            "module.vmseries.google_compute_address.public",
            "module.vmseries.google_compute_instance.this",
            "module.vmseries.google_compute_instance_group.this",
            "module.vmseries.null_resource.dependency_getter",
            "module.vpc_mgmt.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_mgmt.module.vpc.google_compute_network.network",
            "module.vpc_trust.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_trust.module.vpc.google_compute_network.network",
            "module.vpc_untrust.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_untrust.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.lb_internal",
      "mode": "managed",
      "type": "google_compute_region_backend_service",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "CONNECTION",
                "capacity_scaler": 0,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/zones/us-central1-a/instanceGroups/vmseries01-us-central1-a",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "CONNECTION",
                "capacity_scaler": 0,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/zones/us-central1-b/instanceGroups/vmseries02-us-central1-b",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 0,
            "creation_timestamp": "2023-01-10T07:55:43.317-08:00",
            "enable_cdn": false,
            "fingerprint": "_P9bJI-14rw=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/healthChecks/fw-ilb-us-central1-check-tcp22"
            ],
            "id": "projects/tf-gcp-interview-373822/regions/us-central1/backendServices/fw-ilb",
            "load_balancing_scheme": "INTERNAL",
            "name": "fw-ilb",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/networks/trust-vpc",
            "project": "tf-gcp-interview-373822",
            "protocol": "TCP",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/backendServices/fw-ilb",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "data.google_client_config.main",
            "data.google_compute_zones.main",
            "module.bootstrap.data.google_compute_default_service_account.this",
            "module.bootstrap.google_storage_bucket.this",
            "module.bootstrap.google_storage_bucket_iam_member.member",
            "module.bootstrap.google_storage_bucket_object.config_empty",
            "module.bootstrap.google_storage_bucket_object.content_empty",
            "module.bootstrap.google_storage_bucket_object.file",
            "module.bootstrap.google_storage_bucket_object.license_empty",
            "module.bootstrap.google_storage_bucket_object.software_empty",
            "module.bootstrap.random_string.randomstring",
            "module.iam_service_account.google_service_account.this",
            "module.lb_internal.data.google_client_config.this",
            "module.lb_internal.google_compute_health_check.this",
            "module.vmseries.data.google_compute_image.vmseries",
            "module.vmseries.data.google_compute_subnetwork.this",
            "module.vmseries.google_compute_address.private",
            "module.vmseries.google_compute_address.public",
            "module.vmseries.google_compute_instance.this",
            "module.vmseries.google_compute_instance_group.this",
            "module.vmseries.null_resource.dependency_getter",
            "module.vpc_mgmt.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_mgmt.module.vpc.google_compute_network.network",
            "module.vpc_trust.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_trust.module.vpc.google_compute_network.network",
            "module.vpc_untrust.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_untrust.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.spoke1_ilb",
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "backend_service": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/backendServices/spoke1-ilb",
            "creation_timestamp": "2023-01-10T07:55:19.121-08:00",
            "id": "projects/tf-gcp-interview-373822/regions/us-central1/forwardingRules/spoke1-ilb",
            "ip_address": "10.1.0.10",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "INTERNAL",
            "name": "spoke1-ilb",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/networks/spoke1-vpc",
            "network_tier": "PREMIUM",
            "ports": [
              "80"
            ],
            "project": "tf-gcp-interview-373822",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/forwardingRules/spoke1-ilb",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-spoke1"
          },
          "dependencies": [
            "data.google_client_config.main",
            "data.google_compute_zones.main",
            "google_compute_address.consul_external_ip",
            "google_compute_instance.spoke1_vm",
            "google_compute_instance_group.spoke1_ig",
            "module.spoke1_ilb.data.google_client_config.this",
            "module.spoke1_ilb.google_compute_health_check.this",
            "module.spoke1_ilb.google_compute_region_backend_service.this",
            "module.vpc_spoke1.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_spoke1.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.spoke1_ilb",
      "mode": "managed",
      "type": "google_compute_region_backend_service",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "CONNECTION",
                "capacity_scaler": 0,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/zones/us-central1-a/instanceGroups/spoke1-ig",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 0,
            "creation_timestamp": "2023-01-10T07:55:08.036-08:00",
            "enable_cdn": false,
            "fingerprint": "X3G1e6YKhn8=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/healthChecks/spoke1-ilb-us-central1-check-tcp80"
            ],
            "id": "projects/tf-gcp-interview-373822/regions/us-central1/backendServices/spoke1-ilb",
            "load_balancing_scheme": "INTERNAL",
            "name": "spoke1-ilb",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/networks/spoke1-vpc",
            "project": "tf-gcp-interview-373822",
            "protocol": "TCP",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/backendServices/spoke1-ilb",
            "session_affinity": "NONE",
            "timeout_sec": 1
          },
          "dependencies": [
            "data.google_client_config.main",
            "data.google_compute_zones.main",
            "google_compute_address.consul_external_ip",
            "google_compute_instance.spoke1_vm",
            "google_compute_instance_group.spoke1_ig",
            "module.spoke1_ilb.data.google_client_config.this",
            "module.spoke1_ilb.google_compute_health_check.this",
            "module.vpc_spoke1.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_spoke1.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vmseries[\"vmseries01\"]",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "gateway_address": "192.168.1.1",
            "id": "projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-untrust",
            "ip_cidr_range": "192.168.1.0/28",
            "name": "us-central1-untrust",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/networks/untrust-vpc",
            "private_ip_google_access": false,
            "project": "tf-gcp-interview-373822",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-untrust"
          }
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "gateway_address": "192.168.0.1",
            "id": "projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-mgmt",
            "ip_cidr_range": "192.168.0.0/25",
            "name": "us-central1-mgmt",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/networks/mgmt-vpc",
            "private_ip_google_access": false,
            "project": "tf-gcp-interview-373822",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-mgmt"
          }
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "gateway_address": "192.168.2.1",
            "id": "projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-trust",
            "ip_cidr_range": "192.168.2.0/28",
            "name": "us-central1-trust",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/networks/trust-vpc",
            "private_ip_google_access": false,
            "project": "tf-gcp-interview-373822",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-trust"
          }
        }
      ]
    },
    {
      "module": "module.vmseries[\"vmseries01\"]",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "address": "192.168.1.2",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-01-10T07:54:45.779-08:00",
            "id": "projects/tf-gcp-interview-373822/regions/us-central1/addresses/vmseries01-0-private",
            "name": "vmseries01-0-private",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "tf-gcp-interview-373822",
            "purpose": "GCE_ENDPOINT",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/addresses/vmseries01-0-private",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-untrust",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/zones/us-central1-a/instances/vmseries01"
            ]
          },
          "dependencies": [
            "data.google_client_config.main",
            "data.google_compute_zones.main",
            "module.bootstrap.data.google_compute_default_service_account.this",
            "module.bootstrap.google_storage_bucket.this",
            "module.bootstrap.google_storage_bucket_iam_member.member",
            "module.bootstrap.google_storage_bucket_object.config_empty",
            "module.bootstrap.google_storage_bucket_object.content_empty",
            "module.bootstrap.google_storage_bucket_object.file",
            "module.bootstrap.google_storage_bucket_object.license_empty",
            "module.bootstrap.google_storage_bucket_object.software_empty",
            "module.bootstrap.random_string.randomstring",
            "module.iam_service_account.google_service_account.this",
            "module.vmseries.data.google_compute_subnetwork.this",
            "module.vpc_mgmt.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_mgmt.module.vpc.google_compute_network.network",
            "module.vpc_trust.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_trust.module.vpc.google_compute_network.network",
            "module.vpc_untrust.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_untrust.module.vpc.google_compute_network.network"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "address": "192.168.0.2",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-01-10T07:54:55.912-08:00",
            "id": "projects/tf-gcp-interview-373822/regions/us-central1/addresses/vmseries01-1-private",
            "name": "vmseries01-1-private",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "tf-gcp-interview-373822",
            "purpose": "GCE_ENDPOINT",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/addresses/vmseries01-1-private",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-mgmt",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/zones/us-central1-a/instances/vmseries01"
            ]
          },
          "dependencies": [
            "data.google_client_config.main",
            "data.google_compute_zones.main",
            "module.bootstrap.data.google_compute_default_service_account.this",
            "module.bootstrap.google_storage_bucket.this",
            "module.bootstrap.google_storage_bucket_iam_member.member",
            "module.bootstrap.google_storage_bucket_object.config_empty",
            "module.bootstrap.google_storage_bucket_object.content_empty",
            "module.bootstrap.google_storage_bucket_object.file",
            "module.bootstrap.google_storage_bucket_object.license_empty",
            "module.bootstrap.google_storage_bucket_object.software_empty",
            "module.bootstrap.random_string.randomstring",
            "module.iam_service_account.google_service_account.this",
            "module.vmseries.data.google_compute_subnetwork.this",
            "module.vpc_mgmt.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_mgmt.module.vpc.google_compute_network.network",
            "module.vpc_trust.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_trust.module.vpc.google_compute_network.network",
            "module.vpc_untrust.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_untrust.module.vpc.google_compute_network.network"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "address": "192.168.2.2",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-01-10T07:54:45.905-08:00",
            "id": "projects/tf-gcp-interview-373822/regions/us-central1/addresses/vmseries01-2-private",
            "name": "vmseries01-2-private",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "tf-gcp-interview-373822",
            "purpose": "GCE_ENDPOINT",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/addresses/vmseries01-2-private",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-trust",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/zones/us-central1-a/instances/vmseries01"
            ]
          },
          "dependencies": [
            "data.google_client_config.main",
            "data.google_compute_zones.main",
            "module.bootstrap.data.google_compute_default_service_account.this",
            "module.bootstrap.google_storage_bucket.this",
            "module.bootstrap.google_storage_bucket_iam_member.member",
            "module.bootstrap.google_storage_bucket_object.config_empty",
            "module.bootstrap.google_storage_bucket_object.content_empty",
            "module.bootstrap.google_storage_bucket_object.file",
            "module.bootstrap.google_storage_bucket_object.license_empty",
            "module.bootstrap.google_storage_bucket_object.software_empty",
            "module.bootstrap.random_string.randomstring",
            "module.iam_service_account.google_service_account.this",
            "module.vmseries.data.google_compute_subnetwork.this",
            "module.vpc_mgmt.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_mgmt.module.vpc.google_compute_network.network",
            "module.vpc_trust.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_trust.module.vpc.google_compute_network.network",
            "module.vpc_untrust.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_untrust.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vmseries[\"vmseries01\"]",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "address": "104.197.107.246",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-01-10T07:54:56.834-08:00",
            "id": "projects/tf-gcp-interview-373822/regions/us-central1/addresses/vmseries01-0-public",
            "name": "vmseries01-0-public",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "tf-gcp-interview-373822",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/addresses/vmseries01-0-public",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/zones/us-central1-a/instances/vmseries01"
            ]
          },
          "dependencies": [
            "data.google_client_config.main",
            "data.google_compute_zones.main",
            "module.bootstrap.data.google_compute_default_service_account.this",
            "module.bootstrap.google_storage_bucket.this",
            "module.bootstrap.google_storage_bucket_iam_member.member",
            "module.bootstrap.google_storage_bucket_object.config_empty",
            "module.bootstrap.google_storage_bucket_object.content_empty",
            "module.bootstrap.google_storage_bucket_object.file",
            "module.bootstrap.google_storage_bucket_object.license_empty",
            "module.bootstrap.google_storage_bucket_object.software_empty",
            "module.bootstrap.random_string.randomstring",
            "module.iam_service_account.google_service_account.this",
            "module.vmseries.data.google_compute_subnetwork.this",
            "module.vpc_mgmt.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_mgmt.module.vpc.google_compute_network.network",
            "module.vpc_trust.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_trust.module.vpc.google_compute_network.network",
            "module.vpc_untrust.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_untrust.module.vpc.google_compute_network.network"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "address": "104.154.173.151",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-01-10T07:54:56.277-08:00",
            "id": "projects/tf-gcp-interview-373822/regions/us-central1/addresses/vmseries01-1-public",
            "name": "vmseries01-1-public",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "tf-gcp-interview-373822",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/addresses/vmseries01-1-public",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/zones/us-central1-a/instances/vmseries01"
            ]
          },
          "dependencies": [
            "data.google_client_config.main",
            "data.google_compute_zones.main",
            "module.bootstrap.data.google_compute_default_service_account.this",
            "module.bootstrap.google_storage_bucket.this",
            "module.bootstrap.google_storage_bucket_iam_member.member",
            "module.bootstrap.google_storage_bucket_object.config_empty",
            "module.bootstrap.google_storage_bucket_object.content_empty",
            "module.bootstrap.google_storage_bucket_object.file",
            "module.bootstrap.google_storage_bucket_object.license_empty",
            "module.bootstrap.google_storage_bucket_object.software_empty",
            "module.bootstrap.random_string.randomstring",
            "module.iam_service_account.google_service_account.this",
            "module.vmseries.data.google_compute_subnetwork.this",
            "module.vpc_mgmt.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_mgmt.module.vpc.google_compute_network.network",
            "module.vpc_trust.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_trust.module.vpc.google_compute_network.network",
            "module.vpc_untrust.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_untrust.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vmseries[\"vmseries01\"]",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/paloaltonetworksgcp-public/global/images/vmseries-flex-bundle2-1010",
                    "size": 60,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/zones/us-central1-a/disks/vmseries01"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/tf-gcp-interview-373822/zones/us-central1-a/instances/vmseries01",
            "instance_id": "4982775293372544137",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-4",
            "metadata": {
              "mgmt-interface-swap": "enable",
              "serial-port-enable": "true",
              "ssh-keys": "admin:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDcZhZaIxYmbBWvkUWUW9UL1HpsXicUxHirmBtiRZPYlJMBqt1CPmAhZJPhnF1HBE+6IfdiKb4y0eXW/KmOL++VZ+GpCzEzLuW443NJoirTGH7tQSAH3X2puurdvhS1ySidYAetSPBkr3dfIh5FazB1WwztDBwdqy8ku3+jjf5D6BckeW6HyulTNf4ZbM517pc34Awe2N+Q1KsYoll3UbsAf1UB0okujxMnTZJ+rrfOCGnfhN1+0yxfruSY9Gt7ttU8/XCZzoCo0sPUSHjQYiPFn9GAeNmE1Hdw3kycTSO1Qyb54DEn3/1KEnjWxAb8spBzFkZ5oQIumlFUnRYsx+zyTfeE2of+rmVt4Vn5zB6SNpFz3ApNdngP4qLOmDiNwWN7Alqu5JmXi5tQTmwgkuWkxYZntst4vGpLGRm8yRxo7H2 [...]
              "vmseries-bootstrap-gce-storagebucket": "paloaltonetworks-firewall-bootstrap-fqobbwbxfw"
            },
            "metadata_fingerprint": "q7_X6IafbGw=",
            "min_cpu_platform": "Intel Broadwell",
            "name": "vmseries01",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "104.197.107.246",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/networks/untrust-vpc",
                "network_ip": "192.168.1.2",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-untrust",
                "subnetwork_project": "tf-gcp-interview-373822"
              },
              {
                "access_config": [
                  {
                    "nat_ip": "104.154.173.151",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic1",
                "network": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/networks/mgmt-vpc",
                "network_ip": "192.168.0.2",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-mgmt",
                "subnetwork_project": "tf-gcp-interview-373822"
              },
              {
                "name": "nic2",
                "network": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/networks/trust-vpc",
                "network_ip": "192.168.2.2",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-trust",
                "subnetwork_project": "tf-gcp-interview-373822"
              }
            ],
            "project": "tf-gcp-interview-373822",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/zones/us-central1-a/instances/vmseries01",
            "service_account": [
              {
                "email": "999098630472-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud.useraccounts.readonly",
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write"
                ]
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "data.google_client_config.main",
            "data.google_compute_zones.main",
            "module.bootstrap.data.google_compute_default_service_account.this",
            "module.bootstrap.google_storage_bucket.this",
            "module.bootstrap.google_storage_bucket_iam_member.member",
            "module.bootstrap.google_storage_bucket_object.config_empty",
            "module.bootstrap.google_storage_bucket_object.content_empty",
            "module.bootstrap.google_storage_bucket_object.file",
            "module.bootstrap.google_storage_bucket_object.license_empty",
            "module.bootstrap.google_storage_bucket_object.software_empty",
            "module.bootstrap.random_string.randomstring",
            "module.iam_service_account.google_service_account.this",
            "module.vmseries.data.google_compute_image.vmseries",
            "module.vmseries.data.google_compute_subnetwork.this",
            "module.vmseries.google_compute_address.private",
            "module.vmseries.google_compute_address.public",
            "module.vmseries.null_resource.dependency_getter",
            "module.vpc_mgmt.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_mgmt.module.vpc.google_compute_network.network",
            "module.vpc_trust.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_trust.module.vpc.google_compute_network.network",
            "module.vpc_untrust.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_untrust.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vmseries[\"vmseries02\"]",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "gateway_address": "192.168.1.1",
            "id": "projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-untrust",
            "ip_cidr_range": "192.168.1.0/28",
            "name": "us-central1-untrust",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/networks/untrust-vpc",
            "private_ip_google_access": false,
            "project": "tf-gcp-interview-373822",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-untrust"
          }
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "gateway_address": "192.168.0.1",
            "id": "projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-mgmt",
            "ip_cidr_range": "192.168.0.0/25",
            "name": "us-central1-mgmt",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/networks/mgmt-vpc",
            "private_ip_google_access": false,
            "project": "tf-gcp-interview-373822",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-mgmt"
          }
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "gateway_address": "192.168.2.1",
            "id": "projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-trust",
            "ip_cidr_range": "192.168.2.0/28",
            "name": "us-central1-trust",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/networks/trust-vpc",
            "private_ip_google_access": false,
            "project": "tf-gcp-interview-373822",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-trust"
          }
        }
      ]
    },
    {
      "module": "module.vmseries[\"vmseries02\"]",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "address": "192.168.1.3",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-01-10T07:55:06.348-08:00",
            "id": "projects/tf-gcp-interview-373822/regions/us-central1/addresses/vmseries02-0-private",
            "name": "vmseries02-0-private",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "tf-gcp-interview-373822",
            "purpose": "GCE_ENDPOINT",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/addresses/vmseries02-0-private",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-untrust",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/zones/us-central1-b/instances/vmseries02"
            ]
          },
          "dependencies": [
            "data.google_client_config.main",
            "data.google_compute_zones.main",
            "module.bootstrap.data.google_compute_default_service_account.this",
            "module.bootstrap.google_storage_bucket.this",
            "module.bootstrap.google_storage_bucket_iam_member.member",
            "module.bootstrap.google_storage_bucket_object.config_empty",
            "module.bootstrap.google_storage_bucket_object.content_empty",
            "module.bootstrap.google_storage_bucket_object.file",
            "module.bootstrap.google_storage_bucket_object.license_empty",
            "module.bootstrap.google_storage_bucket_object.software_empty",
            "module.bootstrap.random_string.randomstring",
            "module.iam_service_account.google_service_account.this",
            "module.vmseries.data.google_compute_subnetwork.this",
            "module.vpc_mgmt.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_mgmt.module.vpc.google_compute_network.network",
            "module.vpc_trust.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_trust.module.vpc.google_compute_network.network",
            "module.vpc_untrust.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_untrust.module.vpc.google_compute_network.network"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "address": "192.168.0.3",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-01-10T07:55:06.911-08:00",
            "id": "projects/tf-gcp-interview-373822/regions/us-central1/addresses/vmseries02-1-private",
            "name": "vmseries02-1-private",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "tf-gcp-interview-373822",
            "purpose": "GCE_ENDPOINT",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/addresses/vmseries02-1-private",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-mgmt",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/zones/us-central1-b/instances/vmseries02"
            ]
          },
          "dependencies": [
            "data.google_client_config.main",
            "data.google_compute_zones.main",
            "module.bootstrap.data.google_compute_default_service_account.this",
            "module.bootstrap.google_storage_bucket.this",
            "module.bootstrap.google_storage_bucket_iam_member.member",
            "module.bootstrap.google_storage_bucket_object.config_empty",
            "module.bootstrap.google_storage_bucket_object.content_empty",
            "module.bootstrap.google_storage_bucket_object.file",
            "module.bootstrap.google_storage_bucket_object.license_empty",
            "module.bootstrap.google_storage_bucket_object.software_empty",
            "module.bootstrap.random_string.randomstring",
            "module.iam_service_account.google_service_account.this",
            "module.vmseries.data.google_compute_subnetwork.this",
            "module.vpc_mgmt.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_mgmt.module.vpc.google_compute_network.network",
            "module.vpc_trust.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_trust.module.vpc.google_compute_network.network",
            "module.vpc_untrust.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_untrust.module.vpc.google_compute_network.network"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "address": "192.168.2.3",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-01-10T07:55:07.182-08:00",
            "id": "projects/tf-gcp-interview-373822/regions/us-central1/addresses/vmseries02-2-private",
            "name": "vmseries02-2-private",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "tf-gcp-interview-373822",
            "purpose": "GCE_ENDPOINT",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/addresses/vmseries02-2-private",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-trust",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/zones/us-central1-b/instances/vmseries02"
            ]
          },
          "dependencies": [
            "data.google_client_config.main",
            "data.google_compute_zones.main",
            "module.bootstrap.data.google_compute_default_service_account.this",
            "module.bootstrap.google_storage_bucket.this",
            "module.bootstrap.google_storage_bucket_iam_member.member",
            "module.bootstrap.google_storage_bucket_object.config_empty",
            "module.bootstrap.google_storage_bucket_object.content_empty",
            "module.bootstrap.google_storage_bucket_object.file",
            "module.bootstrap.google_storage_bucket_object.license_empty",
            "module.bootstrap.google_storage_bucket_object.software_empty",
            "module.bootstrap.random_string.randomstring",
            "module.iam_service_account.google_service_account.this",
            "module.vmseries.data.google_compute_subnetwork.this",
            "module.vpc_mgmt.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_mgmt.module.vpc.google_compute_network.network",
            "module.vpc_trust.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_trust.module.vpc.google_compute_network.network",
            "module.vpc_untrust.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_untrust.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vmseries[\"vmseries02\"]",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "address": "34.121.197.90",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-01-10T07:55:07.174-08:00",
            "id": "projects/tf-gcp-interview-373822/regions/us-central1/addresses/vmseries02-0-public",
            "name": "vmseries02-0-public",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "tf-gcp-interview-373822",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/addresses/vmseries02-0-public",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/zones/us-central1-b/instances/vmseries02"
            ]
          },
          "dependencies": [
            "data.google_client_config.main",
            "data.google_compute_zones.main",
            "module.bootstrap.data.google_compute_default_service_account.this",
            "module.bootstrap.google_storage_bucket.this",
            "module.bootstrap.google_storage_bucket_iam_member.member",
            "module.bootstrap.google_storage_bucket_object.config_empty",
            "module.bootstrap.google_storage_bucket_object.content_empty",
            "module.bootstrap.google_storage_bucket_object.file",
            "module.bootstrap.google_storage_bucket_object.license_empty",
            "module.bootstrap.google_storage_bucket_object.software_empty",
            "module.bootstrap.random_string.randomstring",
            "module.iam_service_account.google_service_account.this",
            "module.vmseries.data.google_compute_subnetwork.this",
            "module.vpc_mgmt.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_mgmt.module.vpc.google_compute_network.network",
            "module.vpc_trust.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_trust.module.vpc.google_compute_network.network",
            "module.vpc_untrust.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_untrust.module.vpc.google_compute_network.network"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "address": "34.172.133.216",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-01-10T07:54:57.102-08:00",
            "id": "projects/tf-gcp-interview-373822/regions/us-central1/addresses/vmseries02-1-public",
            "name": "vmseries02-1-public",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "tf-gcp-interview-373822",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/addresses/vmseries02-1-public",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/zones/us-central1-b/instances/vmseries02"
            ]
          },
          "dependencies": [
            "data.google_client_config.main",
            "data.google_compute_zones.main",
            "module.bootstrap.data.google_compute_default_service_account.this",
            "module.bootstrap.google_storage_bucket.this",
            "module.bootstrap.google_storage_bucket_iam_member.member",
            "module.bootstrap.google_storage_bucket_object.config_empty",
            "module.bootstrap.google_storage_bucket_object.content_empty",
            "module.bootstrap.google_storage_bucket_object.file",
            "module.bootstrap.google_storage_bucket_object.license_empty",
            "module.bootstrap.google_storage_bucket_object.software_empty",
            "module.bootstrap.random_string.randomstring",
            "module.iam_service_account.google_service_account.this",
            "module.vmseries.data.google_compute_subnetwork.this",
            "module.vpc_mgmt.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_mgmt.module.vpc.google_compute_network.network",
            "module.vpc_trust.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_trust.module.vpc.google_compute_network.network",
            "module.vpc_untrust.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_untrust.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vmseries[\"vmseries02\"]",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/paloaltonetworksgcp-public/global/images/vmseries-flex-bundle2-1010",
                    "size": 60,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/zones/us-central1-b/disks/vmseries02"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/tf-gcp-interview-373822/zones/us-central1-b/instances/vmseries02",
            "instance_id": "1794685210593342601",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-4",
            "metadata": {
              "mgmt-interface-swap": "enable",
              "serial-port-enable": "true",
              "ssh-keys": "admin:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDcZhZaIxYmbBWvkUWUW9UL1HpsXicUxHirmBtiRZPYlJMBqt1CPmAhZJPhnF1HBE+6IfdiKb4y0eXW/KmOL++VZ+GpCzEzLuW443NJoirTGH7tQSAH3X2puurdvhS1ySidYAetSPBkr3dfIh5FazB1WwztDBwdqy8ku3+jjf5D6BckeW6HyulTNf4ZbM517pc34Awe2N+Q1KsYoll3UbsAf1UB0okujxMnTZJ+rrfOCGnfhN1+0yxfruSY9Gt7ttU8/XCZzoCo0sPUSHjQYiPFn9GAeNmE1Hdw3kycTSO1Qyb54DEn3/1KEnjWxAb8spBzFkZ5oQIumlFUnRYsx+zyTfeE2of+rmVt4Vn5zB6SNpFz3ApNdngP4qLOmDiNwWN7Alqu5JmXi5tQTmwgkuWkxYZntst4vGpLGRm8yRxo7H2 [...]
              "vmseries-bootstrap-gce-storagebucket": "paloaltonetworks-firewall-bootstrap-fqobbwbxfw"
            },
            "metadata_fingerprint": "q7_X6IafbGw=",
            "min_cpu_platform": "Intel Broadwell",
            "name": "vmseries02",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.121.197.90",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/networks/untrust-vpc",
                "network_ip": "192.168.1.3",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-untrust",
                "subnetwork_project": "tf-gcp-interview-373822"
              },
              {
                "access_config": [
                  {
                    "nat_ip": "34.172.133.216",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic1",
                "network": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/networks/mgmt-vpc",
                "network_ip": "192.168.0.3",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-mgmt",
                "subnetwork_project": "tf-gcp-interview-373822"
              },
              {
                "name": "nic2",
                "network": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/networks/trust-vpc",
                "network_ip": "192.168.2.3",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-trust",
                "subnetwork_project": "tf-gcp-interview-373822"
              }
            ],
            "project": "tf-gcp-interview-373822",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/zones/us-central1-b/instances/vmseries02",
            "service_account": [
              {
                "email": "999098630472-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud.useraccounts.readonly",
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write"
                ]
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-b"
          },
          "dependencies": [
            "data.google_client_config.main",
            "data.google_compute_zones.main",
            "module.bootstrap.data.google_compute_default_service_account.this",
            "module.bootstrap.google_storage_bucket.this",
            "module.bootstrap.google_storage_bucket_iam_member.member",
            "module.bootstrap.google_storage_bucket_object.config_empty",
            "module.bootstrap.google_storage_bucket_object.content_empty",
            "module.bootstrap.google_storage_bucket_object.file",
            "module.bootstrap.google_storage_bucket_object.license_empty",
            "module.bootstrap.google_storage_bucket_object.software_empty",
            "module.bootstrap.random_string.randomstring",
            "module.iam_service_account.google_service_account.this",
            "module.vmseries.data.google_compute_image.vmseries",
            "module.vmseries.data.google_compute_subnetwork.this",
            "module.vmseries.google_compute_address.private",
            "module.vmseries.google_compute_address.public",
            "module.vmseries.null_resource.dependency_getter",
            "module.vpc_mgmt.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_mgmt.module.vpc.google_compute_network.network",
            "module.vpc_trust.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_trust.module.vpc.google_compute_network.network",
            "module.vpc_untrust.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_untrust.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mgmt.module.firewall_rules",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "vmseries-mgmt",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-01-10T07:54:07.674-08:00",
            "deny": [],
            "description": "Allow ingress access to VM-Series management interface",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/tf-gcp-interview-373822/global/firewalls/vmseries-mgmt",
            "log_config": [],
            "name": "vmseries-mgmt",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/networks/mgmt-vpc",
            "priority": 100,
            "project": "tf-gcp-interview-373822",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/firewalls/vmseries-mgmt",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_mgmt.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mgmt.module.subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "us-central1/us-central1-mgmt",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-01-10T07:54:05.185-08:00",
            "gateway_address": "192.168.0.1",
            "id": "projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-mgmt",
            "ip_cidr_range": "192.168.0.0/25",
            "name": "us-central1-mgmt",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/networks/mgmt-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "tf-gcp-interview-373822",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-mgmt",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc_mgmt.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mgmt.module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/tf-gcp-interview-373822/global/networks/mgmt-vpc",
            "mtu": 0,
            "name": "mgmt-vpc",
            "project": "tf-gcp-interview-373822",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/networks/mgmt-vpc"
          }
        }
      ]
    },
    {
      "module": "module.vpc_spoke1.module.firewall_rules",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "allow-all-spoke1",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2023-01-10T07:54:09.195-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/tf-gcp-interview-373822/global/firewalls/allow-all-spoke1",
            "log_config": [],
            "name": "allow-all-spoke1",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/networks/spoke1-vpc",
            "priority": 100,
            "project": "tf-gcp-interview-373822",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/firewalls/allow-all-spoke1",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_spoke1.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_spoke1.module.routes",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "spoke1-to-ilbnh",
          "schema_version": 0,
          "attributes": {
            "description": "Default route to VM-Series NGFW",
            "dest_range": "0.0.0.0/0",
            "id": "projects/tf-gcp-interview-373822/global/routes/spoke1-to-ilbnh",
            "name": "spoke1-to-ilbnh",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/networks/spoke1-vpc",
            "next_hop_gateway": "",
            "next_hop_ilb": "192.168.2.10",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "tf-gcp-interview-373822",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/routes/spoke1-to-ilbnh",
            "tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_spoke1.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_spoke1.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_spoke1.module.subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "us-central1/us-central1-spoke1",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-01-10T07:54:09.406-08:00",
            "gateway_address": "10.1.0.1",
            "id": "projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-spoke1",
            "ip_cidr_range": "10.1.0.0/25",
            "name": "us-central1-spoke1",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/networks/spoke1-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "tf-gcp-interview-373822",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-spoke1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc_spoke1.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_spoke1.module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": true,
            "id": "projects/tf-gcp-interview-373822/global/networks/spoke1-vpc",
            "mtu": 0,
            "name": "spoke1-vpc",
            "project": "tf-gcp-interview-373822",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/networks/spoke1-vpc"
          }
        }
      ]
    },
    {
      "module": "module.vpc_spoke2.module.firewall_rules",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "allow-all-spoke2",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2023-01-10T07:54:20.601-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/tf-gcp-interview-373822/global/firewalls/allow-all-spoke2",
            "log_config": [],
            "name": "allow-all-spoke2",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/networks/spoke2-vpc",
            "priority": 100,
            "project": "tf-gcp-interview-373822",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/firewalls/allow-all-spoke2",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_spoke2.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_spoke2.module.routes",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "spoke2-to-ilbnh",
          "schema_version": 0,
          "attributes": {
            "description": "Default route to VM-Series NGFW",
            "dest_range": "0.0.0.0/0",
            "id": "projects/tf-gcp-interview-373822/global/routes/spoke2-to-ilbnh",
            "name": "spoke2-to-ilbnh",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/networks/spoke2-vpc",
            "next_hop_gateway": "",
            "next_hop_ilb": "192.168.2.10",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "tf-gcp-interview-373822",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/routes/spoke2-to-ilbnh",
            "tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_spoke2.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_spoke2.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_spoke2.module.subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "us-central1/us-central1-spoke2",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-01-10T07:54:20.807-08:00",
            "gateway_address": "10.2.0.1",
            "id": "projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-spoke2",
            "ip_cidr_range": "10.2.0.0/25",
            "name": "us-central1-spoke2",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/networks/spoke2-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "tf-gcp-interview-373822",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-spoke2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc_spoke2.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_spoke2.module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": true,
            "id": "projects/tf-gcp-interview-373822/global/networks/spoke2-vpc",
            "mtu": 0,
            "name": "spoke2-vpc",
            "project": "tf-gcp-interview-373822",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/networks/spoke2-vpc"
          }
        }
      ]
    },
    {
      "module": "module.vpc_ss.module.firewall_rules",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "shared-services",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "8500",
                  "8200",
                  "8300",
                  "8301",
                  "8501"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-01-10T07:54:02.295-08:00",
            "deny": [],
            "description": "Allow ingress shared services",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/tf-gcp-interview-373822/global/firewalls/shared-services",
            "log_config": [],
            "name": "shared-services",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/networks/ss-vpc",
            "priority": 100,
            "project": "tf-gcp-interview-373822",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/firewalls/shared-services",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_ss.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ss.module.subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "us-central1/us-central1-ss",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-01-10T07:54:02.588-08:00",
            "gateway_address": "10.5.0.1",
            "id": "projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-ss",
            "ip_cidr_range": "10.5.0.0/25",
            "name": "us-central1-ss",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/networks/ss-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "tf-gcp-interview-373822",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-ss",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc_ss.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ss.module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/tf-gcp-interview-373822/global/networks/ss-vpc",
            "mtu": 0,
            "name": "ss-vpc",
            "project": "tf-gcp-interview-373822",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/networks/ss-vpc"
          }
        }
      ]
    },
    {
      "module": "module.vpc_trust.module.firewall_rules",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "allow-all-trust",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2023-01-10T07:54:15.319-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/tf-gcp-interview-373822/global/firewalls/allow-all-trust",
            "log_config": [],
            "name": "allow-all-trust",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/networks/trust-vpc",
            "priority": 100,
            "project": "tf-gcp-interview-373822",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/firewalls/allow-all-trust",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_trust.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_trust.module.subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "us-central1/us-central1-trust",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-01-10T07:54:13.782-08:00",
            "gateway_address": "192.168.2.1",
            "id": "projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-trust",
            "ip_cidr_range": "192.168.2.0/28",
            "name": "us-central1-trust",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/networks/trust-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "tf-gcp-interview-373822",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-trust",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc_trust.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_trust.module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": true,
            "id": "projects/tf-gcp-interview-373822/global/networks/trust-vpc",
            "mtu": 0,
            "name": "trust-vpc",
            "project": "tf-gcp-interview-373822",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/networks/trust-vpc"
          }
        }
      ]
    },
    {
      "module": "module.vpc_untrust.module.firewall_rules",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "allow-all-untrust",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2023-01-10T07:54:03.890-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/tf-gcp-interview-373822/global/firewalls/allow-all-untrust",
            "log_config": [],
            "name": "allow-all-untrust",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/networks/untrust-vpc",
            "priority": 100,
            "project": "tf-gcp-interview-373822",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/firewalls/allow-all-untrust",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_untrust.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_untrust.module.subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "us-central1/us-central1-untrust",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-01-10T07:54:02.670-08:00",
            "gateway_address": "192.168.1.1",
            "id": "projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-untrust",
            "ip_cidr_range": "192.168.1.0/28",
            "name": "us-central1-untrust",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/networks/untrust-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "tf-gcp-interview-373822",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/regions/us-central1/subnetworks/us-central1-untrust",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc_untrust.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_untrust.module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/tf-gcp-interview-373822/global/networks/untrust-vpc",
            "mtu": 0,
            "name": "untrust-vpc",
            "project": "tf-gcp-interview-373822",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-gcp-interview-373822/global/networks/untrust-vpc"
          }
        }
      ]
    }
  ]
}